dfdfd New files added - [MyJavaService,dms,testdynamic] Files modified - [Main,WEB-INF,profiles,component.json,pom.xml]

--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -10,6 +10,19 @@ app.web.compression.enabled=false
 app.web.compression.mimetypes.excludePatterns=image/*
 app.web.compression.mimetypes.includePatterns=*/*
 app.web.compression.minsize=65536
+db.testdynamic.dataSourceType=WM_MANAGED_DATASOURCE
+db.testdynamic.hbm2ddl=update
+db.testdynamic.jndiName=
+db.testdynamic.maxPageSize=100
+db.testdynamic.maxPoolSize=4
+db.testdynamic.minPoolSize=2
+db.testdynamic.password={WM_CLOUD_MYSQL_PASSWORD}
+db.testdynamic.transactionTimeout=30
+db.testdynamic.url=jdbc:mysql://{WM_CLOUD_MYSQL_HOST}/testdynamic?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&createDatabaseIfNotExist=true
+db.testdynamic.username={WM_CLOUD_MYSQL_USER_NAME}
+rest.dms.basepath=/prefabs
+rest.dms.host=instance-yau9bwks.dms.dev.usw2.ficoanalyticcloud.com
+rest.dms.scheme=https
 security.enabled=true
 security.general.cors.allowCredentials=false
 security.general.cors.enabled=false
