--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,38 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/MyJavaService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/dms/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/securityService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
                 </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/testdynamic/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/testdynamic/designtime</directory>
+                <includes>
+                    <include>db_migration_scripts/*.sql</include>
+                </includes>
             </resource>
         </resources>
         <finalName>dynamictests</finalName>
@@ -99,7 +127,10 @@
                         </goals>
                         <configuration>
                             <sources>
+                                <source>services/MyJavaService/src</source>
+                                <source>services/dms/src</source>
                                 <source>services/securityService/src</source>
+                                <source>services/testdynamic/src</source>
                             </sources>
                         </configuration>
                     </execution>
