--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -1,6 +1,7 @@
 app.environment.flyway.enable=test
 app.environment.mysql.service.id=fawdb
 app.environment.spring.profiles.active=dmp
+app.environment.testprop=hello
 app.proxy.enabled=false
 app.proxy.host=
 app.proxy.password=
@@ -10,6 +11,26 @@ app.web.compression.enabled=false
 app.web.compression.mimetypes.excludePatterns=image/*
 app.web.compression.mimetypes.includePatterns=*/*
 app.web.compression.minsize=65536
+db.indextest.dataSourceType=WM_MANAGED_DATASOURCE
+db.indextest.hbm2ddl=none
+db.indextest.jndiName=
+db.indextest.maxPageSize=100
+db.indextest.maxPoolSize=4
+db.indextest.minPoolSize=2
+db.indextest.password={WM_CLOUD_MYSQL_PASSWORD}
+db.indextest.transactionTimeout=30
+db.indextest.url=jdbc:mysql://{WM_CLOUD_MYSQL_HOST}/indextest?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&createDatabaseIfNotExist=true
+db.indextest.username={WM_CLOUD_MYSQL_USER_NAME}
+db.indextest_import.dataSourceType=WM_MANAGED_DATASOURCE
+db.indextest_import.hbm2ddl=none
+db.indextest_import.jndiName=
+db.indextest_import.maxPageSize=100
+db.indextest_import.maxPoolSize=4
+db.indextest_import.minPoolSize=2
+db.indextest_import.password={WM_CLOUD_MYSQL_PASSWORD}
+db.indextest_import.transactionTimeout=30
+db.indextest_import.url=jdbc:mysql://{WM_CLOUD_MYSQL_HOST}/indextest_import?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&createDatabaseIfNotExist=true
+db.indextest_import.username={WM_CLOUD_MYSQL_USER_NAME}
 db.testdynamic.dataSourceType=WM_MANAGED_DATASOURCE
 db.testdynamic.hbm2ddl=none
 db.testdynamic.jndiName=
