--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,7 +1,8 @@
-#Tue Feb 26 06:08:56 UTC 2019
+#Tue Apr 14 06:15:51 UTC 2020
 app.environment.flyway.enable=${app.environment.flyway.enable}
 app.environment.mysql.service.id=${app.environment.mysql.service.id}
 app.environment.spring.profiles.active=${app.environment.spring.profiles.active}
+app.environment.testprop=${app.environment.testprop}
 app.proxy.enabled=${app.proxy.enabled}
 app.proxy.host=${app.proxy.host}
 app.proxy.password=${app.proxy.password}
